--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pandas>=1.5.0
 numpy>=1.21.0
-ta>=0.10.0
-python-binance>=1.0.0
+pandas>=1.3.0
+python-binance>=1.0.16
+websocket-client>=1.3.1
 python-dotenv>=0.19.0
-scikit-learn>=1.0.2
+APScheduler>=3.9.1
+scikit-learn>=0.24.2
 joblib>=1.1.0
-matplotlib>=3.5.0 
-apscheduler>=3.9.1
+ta>=0.7.0  # Technical Analysis library
